--- a/1. git-github.md
+++ b/1. git-github.md
@@ -1,4 +1,28 @@
 # Git
 
 ## -Mean
+
 분산형 버전관리 시스템
+
+~~리누스 토르발스는 리눅스 커널을 관리하는 기존 툴이 엉망인 것에 너무 빡친 바람에 Git이라는 소스관리 툴을 만든다. 리누스는 하도 빡친 나머지, 단 2주만에 완성하는 기염을 토했다. 당시에는 구글에서조차 이게 뭔 쓸데없는 짓이냐고 했는데 정신차리고 보니 월드메이져~~
+
+
+### **\*버전 관리 시스템**
+
+문서나 설계도, 소스 코드 등의 변경점을 관리해주는 소프트웨어\
+과제1_수정_컨펌_완성_최종_1_최종2_최최종_final.md <- 이런 눈에서 땀이 날 것 같은 거를 체계적으로 관리할 수 있게 해준다는 얘기다.
+
+-변경점 관리: 어떤 내용을 누가 작성해서 어느 시점에 들어갔는지 확인할 수 있게 해준다.\
+-버전 관리: 특정 시점에 꼬리표(Tag)를 달아 버전을 표시해주고, 브랜치(Branch) 등으로 동시에 여러 버전을 개발할 수 있게 해준다.\
+-백업&복구: 무언가가 잘못되었을 때 다시 특정 시점으로 돌아가게 해주고, 사고로 내용이 날아간 경우에도 복구할 수 있게 해준다.\
+-협업: 같이 일하는 사람들에게 수정사항을 쉽게 공유
+
+
+### **\*분산형 버전관리 시스템**
+
+버전 관리를 위한 버전을 로컬과 서버에 동시에 보관한다. 협업이 쉽고, 서버가 다운되어도 로컬에 보관한 자료로 작업이 가능하기 때문에 안정적이다. 수정사항이 생기더라도 로컬에서 작업한 파일을 올려서 merge할 수 있기 때문에 충돌의 위험이 적다.
+
+
+### **사용법**
+
+로컬-add-commit-push-원격 저장소 의 과정을 통해 추가, 수정된 버전과 이전 버전을 통합하여 새로운 버전으로 박제한다.
