--- a/1. git-github.md
+++ b/1. git-github.md
@@ -23,6 +23,6 @@
 버전 관리를 위한 버전을 로컬과 서버에 동시에 보관한다. 협업이 쉽고, 서버가 다운되어도 로컬에 보관한 자료로 작업이 가능하기 때문에 안정적이다. 수정사항이 생기더라도 로컬에서 작업한 파일을 올려서 merge할 수 있기 때문에 충돌의 위험이 적다.
 
 
-### **사용법**
+### **\*사용법**
 
 로컬-add-commit-push-원격 저장소 의 과정을 통해 추가, 수정된 버전과 이전 버전을 통합하여 새로운 버전으로 박제한다.
