--- a/1. git-github.md
+++ b/1. git-github.md
@@ -25,4 +25,5 @@
 
 ### **\*사용법**
 
-로컬-add-commit-push-원격 저장소 의 과정을 통해 추가, 수정된 버전과 이전 버전을 통합하여 새로운 버전으로 박제한다.
+로컬-add-commit-push-원격 저장소 의 과정을 통해 추가, 수정된 버전과 이전 버전을 통합하여 새로운 버전으로 박제한다.\
+필요한 경우 이전의 버전으로 쉽게 롤백할 수 있다.
