--- a/1. git-github.md
+++ b/1. git-github.md
@@ -1,11 +1,10 @@
 # Git
-
-## -Mean
+<br>
 
 분산형 버전관리 시스템
 
-~~리누스 토르발스는 리눅스 커널을 관리하는 기존 툴이 엉망인 것에 너무 빡친 바람에 Git이라는 소스관리 툴을 만든다. 리누스는 하도 빡친 나머지, 단 2주만에 완성하는 기염을 토했다. 당시에는 구글에서조차 이게 뭔 쓸데없는 짓이냐고 했는데 정신차리고 보니 월드메이져~~
-
+> ~~리누스 토르발스는 리눅스 커널을 관리하는 기존 툴이 엉망인 것에 너무 빡친 바람에 Git이라는 소스관리 툴을 만든다. 리누스는 하도 빡친 나머지, 단 2주만에 완성하는 기염을 토했다. 당시에는 구글에서조차 이게 뭔 쓸데없는 짓이냐고 했는데 정신차리고 보니 월드메이져~~
+<br>
 
 ### **\*버전 관리 시스템**
 
@@ -27,3 +26,27 @@
 
 로컬-add-commit-push-원격 저장소 의 과정을 통해 추가, 수정된 버전과 이전 버전을 통합하여 새로운 버전으로 박제한다.\
 필요한 경우 이전의 버전으로 쉽게 롤백할 수 있다.
+
+<br>
+
+# Github
+
+세계에서 손꼽히는 무료 원격저장소
+
+### **\* Git과 뭐가 다른가?**
+
+git은 커밋을 통한 버전관리를 하는 용도이고, github는 커밋을 보관할 원격저장소 제공 서비스 중 하나이다.
+클라우드와 비슷하게 보일 수도 있는데, 클라우드가 완성품을 안전하게 보관하기 위한 용도라면 git과 github는 개발중의 순간순간을 스냅샷으로 저장하고, 보관하여 버전관리를 하기 위한 용도이므로 목표점이 다르다고 볼 수 있겠다.
+
+개발자 지망생의 경우에, 자신의 github 자체가 포트폴리오가 될 수 있기 때문에 매일 꾸준히 커밋하는 것을 목표로 잡는 사람도 많다. 일명 잔디를 심는다고 하지..
+
+나는 git과 github를 동시에 사용하고, git bash를 통한 CLI가 좀 더 익숙하다.
+
+# git/giuhub 명령어
+<br>
+
+* Git 초기화, .git 디렉토리 생성 명령어
+```
+git init
+```
+
