--- a/1. git-github.md
+++ b/1. git-github.md
@@ -50,3 +50,27 @@ git은 커밋을 통한 버전관리를 하는 용도이고, github는 커밋을
 git init
 ```
 
+* unmotify 상태인 작업물이나, motify된 작업물의 수정사항을 commit 할 수 있도록 임시리스트에 넣는 명령어
+```
+git add '파일이름'
+```
+
+* 개별 작업물을 하나하나 넣기 보다 폴더 하나를 통째로 커밋하고 싶다면
+```
+git add .
+```
+
+* 임시 리스트의 상태를 확인하고 싶다면
+```
+git status
+```
+
+* 작업물을 커밋으로 묶고 싶다면
+```
+git commit -m 'commit messege'
+```
+
+* 커밋을 github에 올리고 싶다면
+```
+git push '원하는 github repository 주소' main or master
+```
